# brain-hs

./: .gitignore  CHANGELOG.md  brain.cabal  readme.md
app/: Main.hs  MnistDigit.hs
