cabal-version:      2.4
name:               brain
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             xeeny
maintainer:         xeeny@wp.pl

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable brain
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base   ^>= 4.14.3.0
                    , random ^>= 1.2.1.1
                    , split  ^>= 0.2.3.5
    hs-source-dirs:   app
    default-language: Haskell2010
